<resources>
    <string name="app_name">EMsgPop</string>
    <string name="spe_pop">使用特殊方式弹窗</string>

    <string name="miui">小米,为发热而生!</string>
    <string name="no_miui">Google大法好!</string>


    <string name="update">检测更新</string>
    <string name="update_item">正在检测更新</string>
    <string name="help">反馈问题</string>
    <string name="help_item">916321714@qq.com</string>
    
    <string name="new_msg">新短信!</string>

    <string name="msg_from">发信人:</string>
    <string name="msg_main">内容:</string>
    <string name="msg_to">发送给:</string>
    <string name="msg_send">发送</string>
    <string name="msg_state">对方接收状态</string>
    <string name="send_state">发送状态</string>
    
    <string name="not_send">尚未发送</string>
    <string name="succ_send">发送成功!</string>
    <string name="fail_gen">莫名失败</string>
    <string name="fail_radio">失败:没信号</string>
    <string name="fail_null">失败:空短信</string>

    <string name="msg_get">对方已收信</string>
    <string name="msg_not">对方尚未接收</string>


</resources>
